--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-mmkv": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
